<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_forecast"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_forecast" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_sales"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_sales" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />

</menu>
