<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.demandforecast.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_forecast"
        android:name="com.example.demandforecast.fragments.ForecastFragment"
        android:label="@string/title_forecast"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.demandforecast.fragments.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_sales"
        android:name="com.example.demandforecast.fragments.SalesFragment"
        android:label="@string/title_sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.demandforecast.fragments.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.demandforecast.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
